--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,37 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+
+.btn-info{
+    color: #ffffff;
+}
+
+.channel-avatar{
+    width: 100px;
+    height: 100px;
+    position: relative;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    border-radius: 20px;
+}
+
+.channel-avatar-overlay{
+    display: none;
+}
+
+.channel-avatar:hover{
+
+    .channel-avatar-overlay{
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.4);
+        position: absolute;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 20px;
+    }
+
+}
+
