Video details updated with validation

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -45,6 +45,10 @@ a{
         align-items: center;
         border-radius: 20px;
     }
+}
 
+.likes{
+    font-weight: bold;
+    padding-left: 10px;
 }
 
